# pulsar-toolbox

./: .gitattributes  LICENSE  README.md  next.config.ts  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/dashboard/: DashboardMainContent.tsx  DashboardOverlays.tsx  DashboardPage.tsx  DashboardSidebar.tsx  PanelOverlay.tsx  SidebarActionButton.tsx
src/components/hosts/: AddHostModal.tsx  HostsExplorer.tsx  LimitedTopicModal.tsx
src/components/messageView/: LiveControls.tsx  LiveMessageList.tsx  MessageReaderPanel.tsx  SendMessagePanel.tsx
src/components/scenarios/: ScenarioEditor.tsx  ScenarioExplorer.tsx  ScenarioStepCard.tsx
src/components/templates/: TemplateEditor.tsx  TemplatesPanel.tsx
src/components/ui/: ConfirmDialog.tsx  Modal.tsx  SidebarSection.tsx  resizable.tsx
src/hooks/: useDashboardHotkeys.ts  useDashboardState.ts  useExpiringSet.ts  useLiveTopic.ts  useLocalStorage.ts
src/hooks/dashboard/: useDashboardState.ts  useHostManagement.ts  useMessaging.ts  useScenarioManager.ts  useTemplateManager.ts  useTopicFormState.ts
src/lib/: asyncPoller.ts  defaults.ts  hosts.ts  httpPortable.ts  json.ts  messages.ts  payload.ts  pulsarAdmin.ts  pulsarService.ts  pulsarTokenStorage.ts  pulsarUrl.ts  pulsarWs.ts  safeClone.ts  scenario.ts  scenarioEditor.ts  time.ts  topic.ts  topics.ts
src/types/: httpPortable.ts  messaging.ts  payload.ts  pulsar.ts  pulsarUrl.ts  scenario.ts  sidebar.ts
src/utils/: templates.ts
