[package]
name = "pulsar-toolbox"
version = "0.1.0"
description = "A desktop-friendly dashboard for exploring and testing Pulsar clusters."
authors = ["vanjorde"]
license = "MIT"
repository = "https://github.com/vanjorde/pulsar-toolbox"
edition = "2025"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-window-state = "2"

