[package]
name = "pulsar-toolbox"
version = "0.3.0"
description = "A desktop-friendly dashboard for exploring and testing Pulsar clusters."
authors = ["vanjorde"]
license = "MIT"
repository = "https://github.com/vanjorde/pulsar-toolbox"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = { version = "2", features = ["dangerous-settings"] }
tauri-plugin-window-state = "2"
tauri-plugin-keyring = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "http2"] }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "time"] }
futures-util = "0.3"
base64 = "0.22"
url = "2.5"
pulsar = { version = "6", default-features = false, features = ["tokio-runtime", "native-tls"] }
uuid = { version = "1", features = ["v4"] }

